// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component renders a number input 1`] = `
.sxtvycl {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal500);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  transition: all 100ms ease-out;
  width: 100%;
}

.sxtvycl:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxtvycl[disabled] {
  background-color: var(--sx-colors-tonal50);
  border-color: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal300);
  cursor: not-allowed;
}

.sxtvycl::placeholder {
  color: var(--sx-colors-tonal200);
  opacity: 1;
}

.sxtvyclpw03g--size-md {
  height: var(--sx-sizes-4);
  font-size: var(--sx-fontSizes-md);
}

.sxtvycl-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

<div>
  <input
    class="sxtvycl sxtvyclpw03g--size-md sxtvycl-6obnf"
    inputmode="numeric"
    pattern="[0-9]*"
    placeholder="001"
    type="text"
  />
</div>
`;

exports[`Input component renders a text input 1`] = `
.sxtvycl {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal500);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  transition: all 100ms ease-out;
  width: 100%;
}

.sxtvycl:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxtvycl[disabled] {
  background-color: var(--sx-colors-tonal50);
  border-color: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal300);
  cursor: not-allowed;
}

.sxtvycl::placeholder {
  color: var(--sx-colors-tonal200);
  opacity: 1;
}

.sxtvyclpw03g--size-md {
  height: var(--sx-sizes-4);
  font-size: var(--sx-fontSizes-md);
}

.sxtvycl-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

<div>
  <input
    class="sxtvycl sxtvyclpw03g--size-md sxtvycl-6obnf"
    placeholder="INPUT"
    type="text"
  />
</div>
`;
